<resources>
    <string name="app_name">NoteBoard</string>
    <string name="error">Error %1$s</string>
    <string name="confirmEmail">\" Please confirm your email in order to activate your account.\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="verifyEmail">Please verify your email</string>
    <string name="loginError">Error on login. Make sure the credentials are correct</string>
    <string name="emptyInput">Missing field input</string>
    <string name="appTitle">NOTEBOARD</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forgotPassword">forgot password?</string>
    <string name="enter_email">Enter email</string>
    <string name="reset_password">reset password</string>
    <string name="registerFragBtn">Register</string>
    <string name="confirm_passwordRegFrag">Confirm Password</string>
    <string name="enter_passwordRegFrag">Enter Password</string>
    <string name="enter_emailRegFrag">Enter Email</string>
    <string name="enter_usernameRegFrag">Enter Username</string>
    <string name="passRezSuccess">Password reset email was successfully sent!</string>
    <string name="ToastRegiFailed">Registration failed, Returning to Login screen</string>
    <string name="ConfPasstToast">Confirm password must match the password</string>
    <string name="PassLenghtToast">A password must at least 6 characters</string>
    <string name="ValidEmailToast">Must be a valid email</string>
    <string name="FillUsernameToast">Username must be between one and twenty characters</string>
    <string name="RegiSuccess">Registration Successful</string>
    <string name="LoginFailedToast">Login failed, please verify email.</string>
    <string name="EnterEmailToast">Please enter your email.</string>
    <string name="onFaliureDbError">onFailure: Error writing to DB document</string>
    <string name="SuccessfulEmailVerSent">Email sent. Please verify email</string>
    <string name="UserDataWasSaved">onSuccess: user data was saved</string>
    <string name="tempAllTitle">title</string>
    <string name="tempAllContent">content</string>
    <string name="language_selection">Language selection:</string>
    <string name="dark_mode_toggle">Dark mode toggle:</string>
    <string name="dark_mode">Dark mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="hello_user">Hello, %s!</string>
    <string name="view_your_posts">View your posts</string>
    <string name="logout">Logout</string>
    <string name="find_post_with_sharing_code">Find post with sharing code</string>
    <string name="create_a_new_post">CREATE A NEW POST</string>
    <string name="postCreated">Post created!</string>
    <string name="pleaseWait">Saving, please wait</string>
    <string name="btnSave">Save</string>
    <string name="settings_title">Settings</string>
    <string name="create_btn">Create</string>
    <string name="resetPasswordTitle">Reset password</string>
    <string name="loginTitle">Login</string>
    <string name="createPostTitle">Create post</string>
    <string name="profile_title">Profile</string>
    <string name="reg_success">Registration successful</string>
    <string name="example_pass">Example: Qwerty123</string>
    <string name="example_mail">Example: Egor@gmail.com</string>
    <string name="example_name">Example: Egor</string>
    <string name="author">author</string>
    <string name="byAuthor">By %s</string>
    <string name="view_all_posts">View all posts</string>
    <string name="allPosts">All posts</string>
    <string name="postsTitle">%s\'s posts</string>
    <string name="save_changes_EditFrag">Save changes</string>
    <string name="ViewSingle_UsernameDisplay">By %s</string>
    <string name="mainfragment_title">Posts</string>
    <string name="singlepost_title">Post</string>
    <string name="edit_menuBtn">EDIT</string>
    <string name="user_menuBtn">USER</string>
    <string name="settings_menuItem">SETTINGS</string>
    <string name="content_hint">Content</string>
    <string name="title_hint">Title</string>
    <string name="create_btnText">Create</string>
    <string name="email_already_in_use">The email address is already in use by another account.</string>
    <string name="email_badly_formated">The email address is badly formatted.</string>
    <string name="no_user_record">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="btnBack">back</string>
    <string name="register_title">Register User</string>
    <string name="warning"><b>WARNING!</b></string>
    <string name="this_action_can_t_be_undone"><b>This action can\'t be undone!</b></string>
    <string name="please_confirm_your_password_to_continue_with_account_deletion">Please confirm your password to continue with account deletion</string>
    <string name="delete_account">delete account</string>
    <string name="account_settings">account settings</string>
    <string name="enter_password">Enter password</string>
    <string name="username">Username</string>
    <string name="confirm_current_password">Confirm current password</string>
    <string name="back">back</string>
    <string name="update_data">update data</string>
    <string name="emailUpdated">Data successfully updated. Please verify new email.</string>
    <string name="dataUpdated">Data successfully updated</string>
    <string name="errorWhenGettingData">Error when getting data from database</string>
    <string name="invalidPassword">Invalid password</string>
    <string name="registrationSuccess">Registration successful</string>
    <string name="post_added">Post successfully added!</string>
    <string name="post_created_by_user">This post is created by you!</string>
    <string name="access_exists">You already have access to this post!</string>
    <string name="invalid_code">Invalid code</string>
    <string name="find_a_post">FIND A POST</string>
    <string name="enter_post_code">Enter post code</string>
    <string name="find">find</string>
    <string name="account_deleted">Account has been deleted!</string>
    <string name="invalid_password">Invalid password</string>
    <string name="refresh">REFRESH</string>
    <string name="deleted_user">[deleted user]</string>
    <string name="editPostContentEditText">Content</string>
    <string name="BtnEditPostSaveChanges">Save changes</string>
    <string name="TitleEditTextPostEdit">Title</string>
    <string name="are_you_sure">Are you sure you want to delete this post?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="EditedChangesSaved">Changes saved</string>
    <string name="PostDeleted">post successfully deleted!</string>
    <string name="errorDeletingPost">Error deleting post</string>
    <string name="EditingTitle">Editing</string>
    <string name="DeletionConfTitle">Confirm delete</string>
    <string name="findPostTitle">find a post</string>
    <string name="deleteAccountTitle">User deletion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="share">SHARE</string>
    <string name="postShared">A NoteBoard post has been shared with you! \n  %s \n  %s</string>
    <string name="codeShared">A NoteBoard sharing code has been shared with you! The code is \n  %s</string>
    <string name="sms_sent">SMS sent!</string>
    <string name="share_through_sms">SHARE THROUGH SMS</string>
    <string name="enter_a_number_to_send_the_sms_to">Enter a number to send the SMS to</string>
    <string name="share_post">share post</string>
    <string name="share_code">share code</string>
    <string name="smsTitle">Share</string>
    <string name="sms_permission">This feature uses the SMS permission in order to work.</string>
    <string name="sms_permission_2">Need access to the SMS permission in order to use this feature.</string>
    <string name="copyToClip">Copied code to clipboard</string>
    <string name="copy">copy</string>
    <string name="lastEdit">Last edited by %s %s</string>
    <string name="just_now">just now!</string>
    <string name="hours_ago">"%s hour(s) ago"</string>
    <string name="days_ago">"%s day(s) ago"</string>
    <string name="minutes_ago">"%s minute(s) ago"</string>
</resources>